<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="derpquest_title" translatable="false">DerpQuest</string>
    <string name="derp_title">DerpFest Settings</string>
    <string name="navigation_actions_title">Actions</string>
    <string name="navigation_interface_title">Interface</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_system_title">System/Misc</string>
    <string name="accessibility_description">Screen menu</string>
    <string name="accessibility_item_description">%1$s menu item</string>
    <string name="powerbutton_title">Power button</string>
    <string name="powerbutton_summary">Configure additional options &amp; actions</string>
    <string name="navigationbar_title">Navigation</string>
    <string name="navigationbar_summary">Configure system navigation options</string>
    <string name="gesture_options_title">Gestures</string>
    <string name="gesture_options_summary">Enable/disable device specific user actions</string>
    <string name="volume_rocker_title">Volume rocker</string>
    <string name="volume_rocker_summary">Set default behavior and actions for vol +/- keys</string>
    <string name="hw_keys_title">Hardware keys</string>
    <string name="hw_keys_summary">Assign actions for physical navigation buttons</string>
    <string name="quick_settings_title">Quick settings</string>
    <string name="quick_settings_summary">Customize the overall view &amp; functionality</string>
    <string name="headsup_title">Heads-up</string>
    <string name="headsup_summary">Configure Heads-up options</string>
    <string name="themer_title">Themer</string>
    <string name="themer_summary">Browse and select installed themes</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize how battery is displayed</string>
    <string name="clock_options_title">Clock &amp; date</string>
    <string name="clock_options_summary">Set view options of time &amp; date in statusbar</string>
    <string name="traffic_title">Network indicator</string>
    <string name="traffic_summary">Enable &amp; configure network indicator in statusbar</string>
    <string name="status_bar_items_title">Statusbar items</string>
    <string name="status_bar_items_summary">Configure statusbar indicators</string>
    <string name="lockscreen_aosp_title">Native controls</string>
    <string name="lockscreen_aosp_summary">Configure AOSP options for lockscreen &amp; ambient display</string>
    <string name="lockscreen_general_title">General options</string>
    <string name="lockscreen_general_summary">Add or remove visual elements of your lockscreen</string>
    <string name="lockscreen_tuner_title">Lockscreen tuner</string>
    <string name="lockscreen_tuner_summary">Add or remove tuner parts of your lockscreen</string>
    <string name="lockscreen_weather_title2">Weather options</string>
    <string name="lockscreen_weather_summary2">Configure lockscreen weather</string>
    <string name="custom_weather_explainer">You are not limited to the pre-installed weather icon packages. Search the Google PlayStore with the keyword "chronus icons" and you will find a lot of additional packages.</string>
    <string name="lockscreen_fod_summary">Configure settings related to the FOD view</string>
    <string name="custom_fod_icon_explainer">To use your own static FOD icon, use the OPFP app. Make sure to have the animated FOD icon disabled when using a custom icon in OPFP.</string>
    <string name="custom_fod_icon_png_explainer">You can download your own custom FOD icon PNGs from Telegram channels such as FODicons and OP_fps. Use a local gallery and not online services such as Google Photos to pick FOD icons.</string>
    <string name="animations_category_title">Animations</string>
    <string name="animations_category_summary">Set custom animations for certain transitions</string>
    <string name="general_notifications_title">General notifications</string>
    <string name="general_notifications_summary">Miscellaneous notification controls</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Uncategorized options</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_summary">List of recent commits added to DerpFest</string>
    <string name="led_settings_title">LED settings</string>
    <string name="led_settings_summary">Configure the LED light for supported options</string>
    <string name="gaming_title">Gaming mode</string>
    <string name="gaming_title_summary">Extra features for immersive gaming experience</string>
    <string name="empty_category_title">No extra features yet...</string>
    <string name="empty_category_description">However, new features may be added here soon. Check back after future updates!</string>
    <string name="custom_header_title">Custom header</string>
    <string name="derp_about_title">About DerpFest</string>
    <string name="derp_about_summary">A little info about the team</string>
    <string name="derp_telegram_title">DerpFest Telegram Community</string>
    <string name="derp_telegram_summary">Tap here to open our wonderful community!</string>
    <string name="derp_github_title">DerpFest GitHub</string>
    <string name="derp_github_summary">Tap here to open our Github!</string>
    <string name="derp_about_info_summary">This is a small project based on AOSP. We try to be a platform for beginners and support the Custom ROM community with our own unique contributions as well. This ROM exists thanks to inspiration of AOSiP, Thank you!</string>
    <string name="derp_about_team">DerpFest Team</string>
    <string name="derp_about_alex" translatable="false">Alexander Brunswig</string>
    <string name="derp_about_alex_summary" translatable="false">Founder</string>
    <string name="derp_about_david" translatable="false">David Setiawan</string>
    <string name="derp_about_david_summary" translatable="false">QA</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negotiated charger max current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="lockscreen_media_art_title">Lockscreen media art</string>
    <string name="lockscreen_media_art_summary">Display media cover art when playing music</string>
    <string name="lockscreen_media_blur_title">Media art blur level</string>
    <string name="lockscreen_media_art_options_title">Lockscreen media art</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="lock_clock_font_title">Clock font options</string>
    <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
    <string name="lock_clock_font_dialog_title">Select lock clock font</string>
    <string name="lock_date_font_title">Date font options</string>
    <string name="lock_date_font_summary">Change the default font of the lockscreen date widget</string>
    <string name="lock_date_font_dialog_title">Select lock date font</string>
    <string name="qs_tile_style_title">QS tile style</string>
    <string name="qs_tile_style_pick">Pick your QS Style</string>
    <string name="lockscreen_status_bar_title">Status bar</string>
    <string name="lockscreen_status_bar_summary">Display status bar on the lockscreen</string>
    <string name="screen_off_animation_title">Screen off animation</string>
    <string name="qsheader_title">QS Header</string>
    <string name="custom_header_summary">Configure custom header image</string>
    <string name="qs_panel_alpha_title">Panel opacity</string>
    <string name="qs_panel_gradient_title">Status bar gradient</string>
    <string name="qs_panel_gradient_summary">Show gradient below status bar in QS panel</string>
    <string name="qs_sb_bg_alpha_title">Status bar opacity</string>
    <string name="alert_slider_notifications_title">Alert slider notifications</string>
    <string name="alert_slider_notifications_summary">Display notification when changing alert slider position</string>
    <string name="gvisual_title">G-Visual Mod</string>
    <string name="gvisual_summary">Various UI customizations by @ImYourGege</string>
    <string name="carrier_label_settings_title">Carrier label</string>
    <string name="carrier_label_settings_summary">Display the current network name in the status bar</string>
    <string name="status_bar_logo_title">Logo</string>
    <string name="status_bar_logo_summary">Show a custom logo in the status bar</string>
    <string name="status_bar_notif_count_title">Notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="media_category">Media Notification options</string>
    <string name="artwork_media_background_title">Artwork media background</string>
    <string name="artwork_media_background_summary">Set media artwork as notification media background</string>
    <string name="artwork_media_fade_level_title">Artwork fade level</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="usb_default_config_title">USB configuration</string>
    <string name="usb_default_config_summary">Choose the default behavior when connected to a device via USB</string>
    <string name="pulse_ambient_light_category">Screen edge lighting</string>
    <string name="pulse_ambient_light_summary">Show light pulse on new notification</string>
    <string name="volume_key_cursor_control_title">Volume key cursor control</string>
    <string name="notification_alpha_title">Notification background alpha</string>
    <string name="doze_brightness_category">Doze Brightness Config</string>
    <string name="doze_brightness_force_title">Force brightness values</string>
    <string name="doze_brightness_force_summary">Use custom brightness values instead of screen brightness</string>
    <string name="ambient_pulse_brightness_title">Ambient notification brightness</string>
    <string name="ambient_pulse_brightness_summary">Set brightness to use when notifcations are shown</string>
    <string name="ambient_doze_brightness_title">Ambient display brightness</string>
    <string name="ambient_doze_brightness_summary">Set brightness to use during ambient display on</string>
    <string name="corners_category">Corners</string>
    <string name="corner_radius">Rounded corner radius</string>
    <string name="corner_fwvals">Use framework values</string>
    <string name="corner_fwvals_summary">Useful if the device actually has rounded corners</string>
    <string name="fod_recog_animation">Fingerprint animation</string>
    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
    <string name="fod_recog_animation_effect_title">Select fingerprint animation effect</string>
    <string name="ticker_screen_title">Ticker</string>
    <string name="ticker_screen_summary">Show notifications ticker-style in status bar</string>
    <string name="status_bar_show_lyric_title">Status bar lyric</string>
    <string name="status_bar_show_lyric_summary">Show lyric in status bar (need App support)</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G in signal icon instead of LTE</string>
    <string name="notification_flash_title">Flashlight</string>
    <string name="flashlight_on_call_title">Blink Flashlight for call</string>
</resources>