<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 DerpFest

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/status_bar_items_title" >

     <Preference
        android:key="ticker_settings"
        android:title="@string/ticker_screen_title"
        android:summary="@string/ticker_screen_summary"
        android:fragment="com.derpquest.settings.fragments.statusbar.Ticker"/>

     <!-- Statusbar Lyric -->
    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="status_bar_show_lyric"
        android:title="@string/status_bar_show_lyric_title"
        android:summary="@string/status_bar_show_lyric_summary"
        android:defaultValue="true" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="status_bar_notif_count"
        android:title="@string/status_bar_notif_count_title"
        android:summary="@string/status_bar_notif_count_summary"
        android:defaultValue="false" />

    <com.derp.support.preference.SystemSettingMasterSwitchPreference
        android:key="status_bar_logo"
        android:fragment="com.derpquest.settings.fragments.statusbar.StatusbarLogo"
        android:title="@string/status_bar_logo_title"
        android:summary="@string/status_bar_logo_summary"
        android:defaultValue="false" />

    <com.derp.support.preference.SystemSettingMasterSwitchPreference
        android:key="carrier_label_enabled"
        android:fragment="com.derpquest.settings.fragments.statusbar.CustomCarrierLabel"
        android:title="@string/carrier_label_settings_title"
        android:summary="@string/carrier_label_settings_summary"
        android:defaultValue="true" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="show_fourg_icon"
        android:title="@string/show_fourg_icon_title"
        android:summary="@string/show_fourg_icon_summary"
        android:defaultValue="false"/>

    <com.android.settings.widget.CardPreference
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
    </com.android.settings.widget.CardPreference>

</PreferenceScreen>
