<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 DerpFest

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/miscellaneous_title" >

    <Preference
        android:key="default_usb_configuration"
        android:fragment="com.android.settings.connecteddevice.usb.UsbDefaultFragment"
        android:title="@string/usb_default_config_title"
        android:summary="@string/usb_default_config_summary"/>

	<ListPreference
		android:dialogTitle="@string/volume_key_cursor_control_title"
		android:entries="@array/volume_key_cursor_control_entries"
		android:entryValues="@array/volume_key_cursor_control_values"
		android:key="volume_key_cursor_control"
		android:title="@string/volume_key_cursor_control_title" />

    <PreferenceCategory    
        android:key="corners_category"
        android:title="@string/corners_category" >

        <com.derp.support.preference.SecureSettingSwitchPreference
            android:key="sysui_rounded_fwvals"
            android:title="@string/corner_fwvals"
            android:summary="@string/corner_fwvals_summary"
            android:defaultValue="true"
            android:disableDependentsState="true" />

        <com.derp.support.preference.CustomSeekBarPreference
            android:key="sysui_rounded_size"
            android:title="@string/corner_radius"
            android:max="60"
            settings:min="0"
            settings:units="dp"
            android:persistent="false"
            android:dependency="sysui_rounded_fwvals" />

        <!-- <com.derp.support.preference.CustomSeekBarPreference
            android:key="sysui_rounded_content_padding"
            android:title="@string/content_padding"
            android:max="30"
            settings:min="0"
            settings:units="dp"
            android:persistent="false"
            android:dependency="sysui_rounded_fwvals" /-->
    </PreferenceCategory>

    <!-- Gvisual mod -->
    <PreferenceCategory 
         android:key="gvisual_category"
         android:title="@string/gvisual_title">

        <PreferenceScreen
            android:key="gvisual"
            android:title="@string/gvisual_title"
            android:summary="@string/gvisual_summary"
            android:fragment="com.derpquest.settings.fragments.system_misc.Gvisual" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/doze_brightness_category">

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="doze_brightness_force"
            android:title="@string/doze_brightness_force_title"
            android:summary="@string/doze_brightness_force_summary"
            android:defaultValue="false" />

        <com.derp.support.preference.CustomSeekBarPreference
            android:key="ambient_doze_brightness"
            android:title="@string/ambient_doze_brightness_title"
            android:summary="@string/ambient_doze_brightness_summary"
            android:max="100"
            android:min="1"
            android:persistent="false" />

        <com.derp.support.preference.CustomSeekBarPreference
            android:key="ambient_pulse_brightness"
            android:title="@string/ambient_pulse_brightness_title"
            android:summary="@string/ambient_pulse_brightness_summary"
            android:max="100"
            android:min="1"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
