<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 DerpFest

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/general_notifications_title" >

    <Preference
        android:key="pulse_ambient_light"
        android:title="@string/pulse_ambient_light_category"
        android:summary="@string/pulse_ambient_light_summary"
        android:fragment="com.derpquest.settings.fragments.system_misc.EdgeLightingSettings" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="alert_slider_notifications"
        android:title="@string/alert_slider_notifications_title"
        android:summary="@string/alert_slider_notifications_summary"
        android:defaultValue="true" />

    <PreferenceCategory
        android:key="media_category"
        android:title="@string/media_category" >

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="artwork_media_background"
            android:title="@string/artwork_media_background_title"
            android:summary="@string/artwork_media_background_summary"
            android:defaultValue="true" />

        <com.derp.support.preference.SystemSettingSeekBarPreference
            android:key="artwork_media_fade_level"
            android:title="@string/artwork_media_fade_level_title"
            android:summary="@string/artwork_media_fade_level_summary"
            android:dependency="artwork_media_background"
            android:max="100"
            settings:min="0"
            settings:units="%"
            settings:interval="5"
            android:defaultValue="30" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification_flash"
        android:title="@string/notification_flash_title">

        <com.derp.support.preference.SecureSettingListPreference
            android:key="flashlight_on_call"
            android:title="@string/flashlight_on_call_title"
            android:entries="@array/flashlight_on_call_entries"
            android:entryValues="@array/flashlight_on_call_values"
            android:defaultValue="0" />

    </PreferenceCategory>

</PreferenceScreen>
