<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2020 DerpFest

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/derp_about_title" >

    <!-- DerpFest About -->
    <Preference
        android:key="derp_logo"
        android:layout="@layout/about_derp" />

    <PreferenceCategory
        android:key="derp_about_summary"
        android:title="@string/derp_about_summary">

        <Preference
            android:summary="@string/derp_about_info_summary" />

        <Preference
            android:title="@string/derp_telegram_title"
	        android:summary="@string/derp_telegram_summary">
	    <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/s/DerpFest5T" />
        </Preference>

        <Preference
            android:title="@string/derp_github_title"
	        android:summary="@string/derp_github_summary">
	    <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.github.com/DerpLab" />
        </Preference>
    </PreferenceCategory>

	<!-- DerpFest Team -->
    <PreferenceCategory
        android:key="about_team"
        android:title="@string/derp_about_team">

        <Preference
            android:title="@string/derp_about_alex"
	        android:summary="@string/derp_about_alex_summary">
	    <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.github.com/NurKeinNeid" />
        </Preference>

        <Preference
            android:title="@string/derp_about_ido"
	        android:summary="@string/derp_about_ido_summary">
	    <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.github.com/idoybh" />
        </Preference>

        <Preference
            android:title="@string/derp_about_david"
	        android:summary="@string/derp_about_david_summary">
	    <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.github.com/fryevia" />
        </Preference>

    </PreferenceCategory>

	<!-- Maintainer -->
    <PreferenceCategory
        android:key="about_maintainer"
        android:title="@string/about_maintainer">

        <Preference
            android:title="@string/derp_about_maintainer"
	        android:summary="@string/maintainer_name">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>

