<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 DerpFest

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/quick_settings_title" >

    <com.derp.support.preference.SecureSettingListPreference
        android:key="status_bar_quick_qs_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown"
        android:entries="@array/quick_pulldown_entries"
        android:entryValues="@array/quick_pulldown_values"
        android:defaultValue="0" />

    <com.derp.support.preference.SystemSettingListPreference
        android:key="qs_tile_style"
        android:title="@string/qs_tile_style_title"
        android:dialogTitle="@string/qs_tile_style_pick"
        android:entries="@array/qs_tile_style_entries"
        android:entryValues="@array/qs_tile_style_values"
        android:summary="%s"
        android:defaultValue="0" />

    <!-- QS panel opacity -->
    <com.derp.support.preference.CustomSystemSeekBarPreference
        android:key="qs_panel_bg_alpha"
        android:title="@string/qs_panel_alpha_title"
        android:defaultValue="255"
        android:max="255"
        android:min="0"
        settings:units="" />

    <!-- Notification background opacity -->
    <com.derp.support.preference.CustomSystemSeekBarPreference
        android:key="notification_bg_alpha"
        android:title="@string/notification_alpha_title"
        android:defaultValue="255"
        android:max="255"
        settings:min="0"
        settings:units="" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="headers_icons_style"
        android:title="@string/header_icons_style"
        android:summary="@string/header_icons_style_summary"
        android:defaultValue="false" />

    <PreferenceCategory 
         android:key="qsheader_category"
         android:title="@string/qsheader_title">

        <PreferenceScreen
            android:key="qsheader"
            android:title="@string/custom_header_title"
            android:summary="@string/custom_header_summary"
            android:fragment="com.derpquest.settings.fragments.ui.QSHeader" />

        <!-- QS status bar opacity -->
        <com.derp.support.preference.CustomSystemSeekBarPreference
            android:key="qs_sb_bg_alpha"
            android:title="@string/qs_sb_bg_alpha_title"
            android:defaultValue="255"
            android:max="255"
            android:min="0"
            settings:units="" />

        <!-- QS panel gradient below status bar -->
        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="qs_sb_bg_gradient"
            android:title="@string/qs_panel_gradient_title"
            android:summary="@string/qs_panel_gradient_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
